color change on truncate, error correction on truncated

--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -32,8 +32,8 @@
 
 .footer-title:hover {
     cursor: pointer;
-    color: #ffe05d;
-    border: 1px solid #ffe05d;
+    color: #E1B517;
+    border: 1px solid #E1B517;
     transition: 2.5s;
 }
 
