--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -27,8 +27,8 @@
 
 .title:hover {
     cursor: pointer;
-    color: #ffe05d;
-    border: 1px solid #ffe05d;
+    color: #E1B517;
+    border: 1px solid #E1B517;
     transition: 2.5s;
 }
 
